set(DMSERVER_SRC
        CAccountConfig.cpp
        CAccountConfig.h
        CByteBuffer.cpp
        CByteBuffer.h
        CServerConfiguration.cpp
        CServerConfiguration.h
        SFightColorSet.cpp
        SFightColorSet.h
        account.cpp
        account.h
        act.h
        act_change.cpp
        act_comm.cpp
        act_info.cpp
        act_look.cpp
        act_movement.cpp
        act_movement.h
        act_obj1.cpp
        act_obj2.cpp
        act_obj3.cpp
        act_offensive.cpp
        act_other.cpp
        act_skills.cpp
        act_social.cpp
        act_wizard.cpp
        act_wstat.cpp
        affect.cpp
        affect.h
        apf_affect.cpp
        apf_affect.h
        apply_function_type.cpp
        apply_function_type.h
        arm_info_type.cpp
        arm_info_type.h
        ban.cpp
        ban.h
        bank.cpp
        base.h
        base_race_info_type.cpp
        base_race_info_type.h
        bin_search_type.cpp
        bin_search_type.h
        blk_file_type.cpp
        blk_file_type.h
        blkfile.cpp
        blkfile.h
        board.cpp
        bytestring.cpp
        bytestring.h
        cCaptainHook.cpp
        cCaptainHook.h
        cCombat.cpp
        cCombat.h
        cCombatList.cpp
        cCombatList.h
        cHashSystem.cpp
        cHashSystem.h
        cHook.cpp
        cHook.h
        cMultiHook.cpp
        cMultiHook.h
        cMultiMaster.cpp
        cMultiMaster.h
        cNamelist.cpp
        cNamelist.h
        cQueue.cpp
        cQueue.h
        cQueueElem.cpp
        cQueueElem.h
        cStringConstant.cpp
        cStringConstant.h
        cStringInstance.cpp
        cStringInstance.h
        char_data.cpp
        char_data.h
        char_follow_type.cpp
        char_follow_type.h
        char_point_data.cpp
        char_point_data.h
        combat.cpp
        combat.h
        comm.cpp
        comm.h
        command_info.cpp
        command_info.h
        common.cpp
        common.h
        competition.cpp
        competition.h
        composed.h
        config.cpp
        config.h
        connectionlog.cpp
        connectionlog.h
        constants.cpp
        constants.h
        convert.cpp
        create.cpp
        damage_chart_element_type.cpp
        damage_chart_element_type.h
        damage_chart_type.cpp
        damage_chart_type.h
        db.cpp
        db.h
        db_file.cpp
        db_file.h
        dbfind.cpp
        dbfind.h
        demigod.cpp
        descriptor_data.cpp
        descriptor_data.h
        destruct.cpp
        destruct.h
        dice_type.cpp
        dice_type.h
        dictionary.cpp
        dijkstra.cpp
        dijkstra.h
        dil.h
        dil_func_type.cpp
        dil_func_type.h
        dilargstype.cpp
        dilargstype.h
        dilargtype.cpp
        dilargtype.h
        dilexp.cpp
        dilexp.h
        dilfld.cpp
        dilframe.cpp
        dilframe.h
        dilinst.cpp
        dilinst.h
        dilintr.cpp
        dilintr.h
        dilprg.cpp
        dilprg.h
        dilrun.cpp
        dilrun.h
        dilsecure.cpp
        dilsecure.h
        diltemplate.cpp
        diltemplate.h
        dilval.cpp
        dilval.h
        dilvar.cpp
        dilvar.h
        dilxref.cpp
        dilxref.h
        door_data.cpp
        door_data.h
        eliza.cpp
        essential.h
        experience.cpp
        experience.h
        extra.cpp
        extra.h
        extra_descr_data.cpp
        extra_descr_data.h
        fight.cpp
        fight.h
        file_index_type.cpp
        file_index_type.h
        files.cpp
        files.h
        flatrate_type.cpp
        flatrate_type.h
        guild.cpp
        guild.h
        guilddef.h
        handler.cpp
        handler.h
        hashstring.h
        help.cpp
        help.new.h
        help_index_type.cpp
        help_index_type.h
        hometown.cpp
        interpreter.cpp
        interpreter.h
        justice.cpp
        justice.h
        limits.cpp
        limits.h
        magic.cpp
        magic.h
        magic1.cpp
        magic2.cpp
        mail_file_info_type.cpp
        mail_file_info_type.h
        main.cpp
        main.h
        memory.cpp
        mobact.cpp
        mobact.h
        modify.cpp
        modify.h
        money.cpp
        money.h
        money_type.cpp
        money_type.h
        movement.h
        nanny.cpp
        nanny.h
        nice.cpp
        nice.h
        npc_data.cpp
        npc_data.h
        obj_data.cpp
        obj_data.h
        pain.cpp
        pc_account_data.cpp
        pc_account_data.h
        pc_data.cpp
        pc_data.h
        pc_time_data.cpp
        pc_time_data.h
        pcsave.cpp
        pcsave.h
        persist.cpp
        postoffice.cpp
        protocol.cpp
        protocol.h
        race_info_type.cpp
        race_info_type.h
        reception.cpp
        reception.h
        room_data.cpp
        room_data.h
        room_direction_data.cpp
        room_direction_data.h
        shi_info_type.cpp
        shi_info_type.h
        shop.cpp
        signals.cpp
        signals.h
        skill_interval.cpp
        skill_interval.h
        skills.cpp
        skills.h
        slime.cpp
        snoop_data.cpp
        snoop_data.h
        spec_arg.cpp
        spec_arg.h
        spec_assign.cpp
        spec_assign.h
        spec_procs.cpp
        spell_args.cpp
        spell_args.h
        spell_info_type.cpp
        spell_info_type.h
        spell_parser.cpp
        spelldef.h
        spells.h
        str_parse.cpp
        str_parse.h
        string.cpp
        structs.cpp
        structs.h
        swap.cpp
        system.cpp
        system.h
        teach.cpp
        terminal_setup_type.cpp
        terminal_setup_type.h
        textutil.cpp
        textutil.h
        tick_function_type.cpp
        tick_function_type.h
        tif_affect.cpp
        tif_affect.h
        time_info_data.cpp
        time_info_data.h
        translate.h
        tree_type.cpp
        tree_type.h
        trie.cpp
        trie.h
        trie_entry.cpp
        trie_entry.h
        trie_type.cpp
        trie_type.h
        ttydef.h
        unit_affected_type.cpp
        unit_affected_type.h
        unit_data.cpp
        unit_data.h
        unit_fptr.cpp
        unit_fptr.h
        unit_function_array_type.cpp
        unit_function_array_type.h
        unit_vector_data.cpp
        unit_vector_data.h
        unitfind.cpp
        unitfind.h
        utility.cpp
        utility.h
        utils.h
        values.h
        visit_data.cpp
        visit_data.h
        weather.cpp
        weather.h
        wmacros.h
        wpn_info_type.cpp
        wpn_info_type.h
        zon_basis.cpp
        zon_basis.h
        zon_midgaard.cpp
        zon_wiz.cpp
        zone_boot.cpp
        zone_info_type.cpp
        zone_info_type.h
        zone_reset.cpp
        zone_reset_cmd.cpp
        zone_reset_cmd.h
        zone_type.cpp
        zone_type.h
        constants.cpp
        BanEntry.cpp BanEntry.h
        )

add_compile_definitions(DMSERVER MEMORY_DEBUG MUD_DEBUG)
add_executable(dmserver ${DMSERVER_SRC})
target_link_libraries(dmserver crypt)
