set(DMSERVER_SRC
        account.cpp
        account.h
        act_change.cpp
        act_comm.cpp
        act_info.cpp
        act_look.cpp
        act_movement.cpp
        act_obj1.cpp
        act_obj2.cpp
        act_obj3.cpp
        act_offensive.cpp
        act_other.cpp
        act_skills.cpp
        act_social.cpp
        act_wizard.cpp
        act_wstat.cpp
        affect.cpp
        affect.h
        apf_affect.cpp
        ban.cpp
        ban.h
        bank.cpp
        blkfile.cpp
        blkfile.h
        board.cpp
        bytestring.cpp
        combat.cpp
        comm.cpp
        comm.h
        common.cpp
        common.h
        competition.cpp
        config.cpp
        connectionlog.cpp
        constants.cpp
        convert.cpp
        create.cpp
        db.cpp
        db.h
        db_file.cpp
        db_file.h
        db_utils.cpp
        dbfind.cpp
        demigod.cpp
        destruct.cpp
        dictionary.cpp
        dijkstra.cpp
        dil.h
        dilexp.cpp
        dilfld.cpp
        dilinst.cpp
        dilrun.cpp
        eliza.cpp
        experience.cpp
        extra.cpp
        fight.cpp
        files.cpp
        files.h
        guild.cpp
        handler.cpp
        handler.h
        help.cpp
        hometown.cpp
        interpreter.cpp
        interpreter.h
        justice.cpp
        justice.h
        limits.cpp
        limits.h
        magic.cpp
        magic.h
        magic1.cpp
        magic2.cpp
        memory.cpp
        mobact.cpp
        modify.cpp
        money.cpp
        money.h
        movement.h
        namelist.cpp
        nanny.cpp
        nice.cpp
        pain.cpp
        pcsave.cpp
        persist.cpp
        postoffice.cpp
        postoffice.h
        protocol.cpp
        queue.cpp
        reception.cpp
        select.cpp
        shop.cpp
        signals.cpp
        skills.cpp
        skills.h
        slime.cpp
        spec_assign.cpp
        spec_procs.cpp
        spell_parser.cpp
        spells.h
        str_parse.cpp
        string.cpp
        structs.cpp
        structs.h
        swap.cpp
        sysport.cpp
        sysport.h
        system.cpp
        system.h
        teach.cpp
        textutil.cpp
        textutil.h
        tif_affect.cpp
        trie.cpp
        trie.h
        unitfind.cpp
        utility.cpp
        utils.h
        values.h
        weather.cpp
        zon_basis.cpp
        zon_midgaard.cpp
        zon_wiz.cpp
        zone_boot.cpp
        zone_reset.cpp
        main_functions.cpp)

add_compile_definitions(DMSERVER MEMORY_DEBUG MUD_DEBUG)
add_executable(dmserver main.cpp)
add_library(dmserver_lib STATIC ${DMSERVER_SRC})
target_link_libraries(dmserver crypt dmserver_lib)
