set(DMSERVER_SRC
        account.cpp
        account.h
        act.h
        act_change.cpp
        act_comm.cpp
        act_info.cpp
        act_look.cpp
        act_movement.cpp
        act_obj1.cpp
        act_obj2.cpp
        act_obj3.cpp
        act_offensive.cpp
        act_other.cpp
        act_skills.cpp
        act_social.cpp
        act_wizard.cpp
        act_wstat.cpp
        affect.cpp
        affect.h
        apf_affect.cpp
        ban.cpp
        ban.h
        bank.cpp
        base.h
        blkfile.cpp
        blkfile.h
        board.cpp
        bytestring.cpp
        bytestring.h
        combat.cpp
        combat.h
        comm.cpp
        comm.h
        common.cpp
        common.h
        competition.cpp
        competition.h
        composed.h
        config.cpp
        config.h
        connectionlog.cpp
        connectionlog.h
        constants.cpp
        constants.h
        convert.cpp
        create.cpp
        db.cpp
        db.h
        db_file.cpp
        db_file.h
        db_utils.cpp
        dbfind.cpp
        dbfind.h
        demigod.cpp
        destruct.cpp
        dictionary.cpp
        dijkstra.cpp
        dijkstra.h
        dil.h
        dilexp.cpp
        dilexp.h
        dilfld.cpp
        dilinst.cpp
        dilinst.h
        dilrun.cpp
        dilrun.h
        eliza.cpp
        essential.h
        experience.cpp
        extra.cpp
        extra.h
        fight.cpp
        fight.h
        files.cpp
        files.h
        guild.cpp
        guild.h
        guilddef.h
        handler.cpp
        handler.h
        hashstring.h
        help.cpp
        hometown.cpp
        interpreter.cpp
        interpreter.h
        justice.cpp
        justice.h
        limits.cpp
        limits.h
        magic.cpp
        magic.h
        magic1.cpp
        magic2.cpp
        main.cpp
        main.h
        memory.cpp
        mobact.cpp
        modify.cpp
        modify.h
        money.cpp
        money.h
        movement.h
        namelist.cpp
        namelist.h
        nanny.cpp
        nice.cpp
        pain.cpp
        pcsave.cpp
        persist.cpp
        postoffice.cpp
        postoffice.h
        protocol.cpp
        protocol.h
        queue.cpp
        queue.h
        reception.cpp
        select.cpp
        select.h
        shop.cpp
        signals.cpp
        skills.cpp
        skills.h
        slime.cpp
        spec_assign.cpp
        spec_assign.h
        spec_procs.cpp
        spell_parser.cpp
        spelldef.h
        spells.h
        str_parse.cpp
        str_parse.h
        string.cpp
        structs.cpp
        structs.h
        swap.cpp
        sysport.cpp
        sysport.h
        system.cpp
        system.h
        teach.cpp
        textutil.cpp
        textutil.h
        tif_affect.cpp
        translate.h
        trie.cpp
        trie.h
        ttydef.h
        unitfind.cpp
        unitfind.h
        unixshit.h
        utility.cpp
        utility.h
        utils.h
        values.h
        weather.cpp
        weather.h
        wmacros.h
        zon_basis.cpp
        zon_midgaard.cpp
        zon_wiz.cpp
        zone_boot.cpp
        zone_reset.cpp
        zone_reset.h
        )

add_compile_definitions(DMSERVER MEMORY_DEBUG MUD_DEBUG)
add_executable(dmserver ${DMSERVER_SRC})
target_link_libraries(dmserver crypt)
